recursion.lessons.recursion.tree.Tree.scala.error
Tree:16: error: not found: value longueur
	avance(longueur);
               ^Tree:22: error: not found: value longueur
	avance(longueur);
               ^